@@ -65,7 +65,7 @@ public class RuleEncoder extends YsldEncodeHandler<Rule> {
             push("legend").inline(new GraphicEncoder(graphic)).pop();
         }
         if (rule.getFilter() != null && rule.getFilter() != Filter.INCLUDE) {
-            put("filter", String.format("${%s}", escapeForEmbededCQL(ECQL.toCQL(rule.getFilter()))));
+            put("filter", "${%s}".formatted(escapeForEmbededCQL(ECQL.toCQL(rule.getFilter()))));
         }
         if (rule.isElseFilter()) {
             put("else", true);
